# google_adk_pdf_summary

./: .env-example  .gitignore  README.MD
pdf_summary/: __init__.py  agent.py  pyproject.toml  root_agent_prompt.py
pdf_summary/shared_libraries/: callbacks.py  file_utils.py
pdf_summary/sub_agents/: research_agent.py  research_agent_prompt.py  summarize_rfp_agent.py  summarize_rfp_agent_prompt.py
pdf_summary/tools/: fetch_transcript.py  store_state.py
